# spacedrive

.cargo/: config.toml
core/: .gitignore  Cargo.toml
core/prisma/: Cargo.toml  schema.prisma
core/src/: lib.rs
core/src/encode/: thumb.rs
core/src/file/: mod.rs
core/src/file/cas/: identifier.rs
core/src/file/explorer/: open.rs
core/src/job/: jobs.rs  mod.rs
core/src/node/: mod.rs  state.rs
core/src/sys/: locations.rs  mod.rs  volumes.rs
core/src/util/: db.rs
