[package]
name = "sdcore-prisma"
version = "0.1.0"
edition = "2021"

# When importing sdcore-prisma as a library ensure you provide any empty array of default features!

[features]
default = ["cli"]
cli = ["dep:prisma-client-rust-cli"]

[[bin]]
name = "prisma"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.5.0" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.5.0", optional = true }

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
ts-rs = "6.1.2"
